# FrameworkTest

./: TestLibWrapper.sln
TestLibWrapper/: TestLib.cs  TestLibWrapper.1.0.6.nupkg  TestLibWrapper.nuspec  TestLibWrapper.targets
TestLibWrapper/runtimes/ios-arm64/native/Debug/TestLib.framework/: TestLib
TestLibWrapper/runtimes/ios-arm64/native/Debug/TestLib.framework.dSYM/Contents/Resources/Relocations/aarch64/: TestLib.yml
TestLibWrapper/runtimes/ios-arm64/native/Debug/TestLib.framework/_CodeSignature/: CodeResources
TestLibWrapper/runtimes/native/TestLib.framework/Versions/CXX/: TestLib
native/: CMakeLists.txt  CMakePresets.json  Info.plist
native/cmake/: android-arm64.cmake
native/include/: test.hpp
native/src/: test.cpp
